--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -386,6 +386,16 @@ martin@cs.mcgill.ca}
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
+
+[Brain-dump mode]
+
+What is the the problem? Effort and cost associated to REST API documentation with usage examples.
+Why is this a problem? Cost vs. benefit of usage examples is not known. What to include in the examples?
+What have we done? Performed an empirical study with 20 professional software engineers with REST API experience to understand how their productivity and types of problems faced changes with respect to usage examples.
+What have we learned? (Hoping) examples help developer perform task with fewer problems with greater success, with fewer errors, and faster in terms of time.
+What does it mean? (expected) API developers should include usage examples in REST API documentation that include specific examples based on the problems faced.
+
+
 \end{abstract}
 
 % no keywords
@@ -576,7 +586,14 @@ To answer RQ2, we analyzed the data artifact qualitatively. The data artifact ex
 
 \section{Results}
 
+\subsection{RQ1: REST API Client Developer Productivity} % (fold)
 
+A graph showing the difference in productivity metrics between G1 and G2.
+Implications
+
+\subsection{RQ2: Common Problems Faced by REST API Client Developers} % (fold)
+
+% subsection rq1 (end)
 
   Observation and Implications
     For each task, describe the results. Provide examples of failed attempts with counts, and relate to the documentation sources to share an observation. Imply what needs to be done.
