--- a/refs.bib
+++ b/refs.bib
@@ -941,3 +941,69 @@ month={Sept},},
  address = {Washington, DC, USA},
  keywords = {API Documents, Examples, Structures, Code Clustering, Ranking},
 }
+
+@article{rama,
+
+author={Rama,Girish M. and Kak,Avinash},
+
+year={2015},
+
+title={Some structural measures of API usability},
+
+journal={Software: Practice and Experience},
+
+volume={45},
+
+number={1},
+
+pages={75-110},
+
+abstract={In this age of collaborative software development, the importance of usable APIs is well recognized. There already exists a rich body of literature that addresses issues ranging from how to design usable APIs to assessing qualitatively the usability of a given API. However, there does not yet exist a set of general‐purpose metrics that can be pressed into service for a more quantitative assessment of API usability. The goal of this paper is to remedy this shortcoming in the literature. Our work presents a set of formulas that examine the API method declarations from the perspective of several commonly held beliefs regarding what makes APIs difficult to use. We validate the numerical characterizations of API usability as produced by our metrics through the APIs of several software systems. Copyright © 2013 John Wiley & Sons, Ltd.;  SUMMARY In this age of collaborative software development, the importance of usable APIs is well recognized. There already exists a rich body of literature that addresses issues ranging from how to design usable APIs to assessing qualitatively the usability of a given API. However, there does not yet exist a set of general-purpose metrics that can be pressed into service for a more quantitative assessment of API usability. The goal of this paper is to remedy this shortcoming in the literature. Our work presents a set of formulas that examine the API method declarations from the perspective of several commonly held beliefs regarding what makes APIs difficult to use. We validate the numerical characterizations of API usability as produced by our metrics through the APIs of several software systems. Copyright © 2013 John Wiley & Sons, Ltd.;  SUMMARY In this age of collaborative software development, the importance of usable APIs is well recognized. There already exists a rich body of literature that addresses issues ranging from how to design usable APIs to assessing qualitatively the usability of a given API. However, there does not yet exist a set of general-purpose metrics that can be pressed into service for a more quantitative assessment of API usability. The goal of this paper is to remedy this shortcoming in the literature. Our work presents a set of formulas that examine the API method declarations from the perspective of several commonly held beliefs regarding what makes APIs difficult to use. We validate the numerical characterizations of API usability as produced by our metrics through the APIs of several software systems. Copyright © 2013 John Wiley & Sons, Ltd.;},
+
+keywords={API usability; metrics; application programming interface},
+
+isbn={0038-0644},
+
+language={English},
+
+}
+
+@Inbook{Grill2012,
+author="Grill, Thomas
+and Polacek, Ondrej
+and Tscheligi, Manfred",
+editor="Winckler, Marco
+and Forbrig, Peter
+and Bernhaupt, Regina",
+title="Methods towards API Usability: A Structural Analysis of Usability Problem Categories",
+bookTitle="Human-Centered Software Engineering: 4th International Conference, HCSE 2012, Toulouse, France, October 29-31, 2012. Proceedings",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="164--180",
+isbn="978-3-642-34347-6",
+doi="10.1007/978-3-642-34347-6_10",
+url="http://dx.doi.org/10.1007/978-3-642-34347-6_10"
+}
+
+
+
+@article{Scheller2015145,
+title = "Automated measurement of \{API\} usability: The \{API\} Concepts Framework ",
+journal = "Information and Software Technology ",
+volume = "61",
+number = "",
+pages = "145 - 162",
+year = "2015",
+note = "",
+issn = "0950-5849",
+doi = "http://dx.doi.org/10.1016/j.infsof.2015.01.009",
+url = "http://www.sciencedirect.com/science/article/pii/S0950584915000178",
+author = "Thomas Scheller and Eva Kühn",
+keywords = "\{API\} usability",
+keywords = "API design",
+keywords = "Complexity measures",
+keywords = "Metrics ",
+abstract = "AbstractContext Usability is an important software quality attribute for APIs. Unfortunately, measuring it is not an easy task since many things like experienced evaluators, suitable test users, and a functional product are needed. This makes existing usability measurement methods difficult to use, especially for non-professionals. Objective To make \{API\} usability measurement easier, an automated and objective measurement method would be needed. This article proposes such a method. Since it would be impossible to find and integrate all possible factors that influence \{API\} usability in one step, the main goal is to prove the feasibility of the introduced approach, and to define an extensible framework so that additional factors can easily be defined and added later. Method A literature review is conducted to find potential factors influencing \{API\} usability. From these factors, a selected few are investigated more closely with usability studies. The statistically evaluated results from these studies are used to define specific elements of the introduced framework. Further, the influence of the user as a critical factor for the framework’s feasibility is evaluated. Results The \{API\} Concepts Framework is defined, with an extensible structure based on concepts that represent the user’s actions, measurable properties that define what influences the usability of these concepts, and learning effects that represent the influence of the user’s experience. A comparison of values calculated by the framework with user studies shows promising results. Conclusion It is concluded that the introduced approach is feasible and provides useful results for evaluating \{API\} usability. The extensible framework easily allows to add new concepts and measurable properties in the future. "
+}
+
